# wipeout-pulse-shipedit-free

./: .gitignore  .gitlab-ci.yml  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README  README.md  editor.wad
.github/workflows/: build.yml
mingw/: build-win32.sh  mingw32.toolchain  mingw64.toolchain
msvc/: build-win32-msvc.txt
src/: fileio.c  fileio.h  fps.h  nativeui.h  nativeui_linux.c  nativeui_macos.m  nativeui_win32.c  saveskin.c  saveskin.h  shipedit.c  shipedit.manifest  shipedit.rc  shipmodelformat.h  template_paramsfo.h  util.c  util.h
src/fontaine/: fontaine2.c  fontaine2.h
src/nativefiledialog/src/: nfd_gtk.c
src/psp-save/: chnnlsv.c  psf.c  psp-save.c  psp-save.h
src/scolorq/: Makefile  spatial_color_quant.cpp  spatial_color_quant.h
